--- a/.editorconfig
+++ b/.editorconfig
@@ -16,7 +16,7 @@ indent_style = space
 indent_size = 2
 end_of_line = lf
 trim_trailing_whitespace = true
-insert_final_newline = true
+insert_final_newline = false
 
 [*.svg]
 insert_final_newline = false
